# get-physics-done

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTIC-DISCUSSION-DOGFOOD-NOTES.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  COLLABORATOR-FEEDBACK-PLAN.md  CONTRIBUTING.md  LICENSE  MANUAL-TEST-PLAN.md  README.md  REPO_INTERDEPENDENCY_GRAPH.md  REPO_INTERDEPENDENCY_GRAPH_AUDIT.md  SECURITY.md  TUTORIAL.md  WARP.md  config.json  get-physics-done-0.1.0.tgz  package-lock.json  package.json  pyproject.toml
.claude/: gpd-file-manifest.json  settings.json
.claude/agents/: gpd-bibliographer.md  gpd-consistency-checker.md  gpd-debugger.md  gpd-executor.md  gpd-experiment-designer.md  gpd-literature-reviewer.md  gpd-notation-coordinator.md  gpd-paper-writer.md  gpd-phase-researcher.md  gpd-plan-checker.md  gpd-planner.md  gpd-project-researcher.md  gpd-referee.md  gpd-research-synthesizer.md  gpd-review-literature.md  gpd-review-math.md  gpd-review-physics.md  gpd-review-reader.md  gpd-review-significance.md  gpd-roadmapper.md  gpd-theory-mapper.md  gpd-verifier.md
.claude/cache/: gpd-update-check.json
.claude/hooks/: codex_notify.py  runtime_detect.py
.codex/: config.toml  gpd-file-manifest.json
.codex/agents/: gpd-bibliographer.md  gpd-consistency-checker.md  gpd-debugger.md  gpd-executor.md  gpd-experiment-designer.md  gpd-literature-reviewer.md  gpd-notation-coordinator.md  gpd-paper-writer.md  gpd-phase-researcher.md  gpd-plan-checker.md  gpd-planner.md  gpd-project-researcher.md  gpd-referee.md  gpd-research-synthesizer.md  gpd-roadmapper.md  gpd-theory-mapper.md  gpd-verifier.md
.codex/hooks/: check_update.py  notify.py  statusline.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: nightly-handoff-bundle.yml  publish-npm.yml  publish-release.yml  release.yml  staging-rebuild.yml  test.yml
.gpd/: CONVENTIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  state.json  state.json.bak
.gpd/research/: SUMMARY.md
.planning/: STATE.md  state.json
.playwright-mcp/: page-2026-04-08T23-59-45-736Z.yml
artifacts/bug-campaign/: phase-status.json  phase-status.md
benchmarks/: __init__.py  loader.py  phase17_benchmark_helpers.py  phase17_experiment_checkpoints.json  phase17_thresholds.json  phase17_watchdog_summary.json  runner.py  schema.py  test_checkpoint_batch.py  test_phase_projection_latency.py  test_query_index_freshness.py  test_resume_recent.py
benchmarks/tasks/: classical_mechanics.json  condensed_matter.json  gr_cosmology.json  qft.json  quantum_info.json  stat_mech.json
docs/: README.md  USER-GUIDE.md  claude-code.md  codex.md  command-workflow-allowlist.md  e2e-physics-test-report.md  gemini-cli.md  github-copilot-cli.md  hooks.md  linux.md  macos.md  opencode.md  runtime-catalog-reference.md  schema-registry-ownership.md  windows.md
docs/rfcs/: 2026-04-knowledge-trust-phase0.md  2026-04-knowledge-trust-rollout-sequence.md  README.md
examples/: README.md
examples/classical-mechanics/: kepler-problem.md
examples/electrodynamics/: larmor-radiation.md
examples/fluid-dynamics/: rayleigh-benard.md
examples/qft/: qed-anomalous-magnetic-moment.md
examples/quantum-mechanics/: coherent-state-dynamics.md  hydrogen-atom-so4.md
examples/statistical-mechanics/: ising-model-critical-exponents.md
get-arkhe-done/: Cargo.toml  FOUNDATION_ID  README.arkhe
get-arkhe-done/.gtd/: COHERENCE.md  PROJECT.md  ROADMAP.md  STATE.md
get-arkhe-done/examples/: generate_primes.rs
get-arkhe-done/src/: lib.rs  main.rs  test.ark
get-arkhe-done/src/core/: coherence.rs  consensus.rs  labyrinth.rs  labyrinth_gen.rs  mod.rs  phase.rs  qpt.rs  timeline.rs
get-arkhe-done/src/io/: aeonfs.rs  dimos.rs  fractaldb.rs  lml.rs  mirofish.rs  mod.rs  pentagi_memory.rs  render.rs
get-arkhe-done/src/physics/: dixon.rs  fields.rs  loss.rs  mod.rs  neurofem.rs  retrocausal.rs  verification.rs
get-arkhe-done/src/robotics/: hermes.rs  neurofem_rrt.py
get-arkhe-done/src/runtime/: ace_miro.rs  agents.rs  arkhelang.rs  market.rs  mod.rs  pentagi.rs  scheduler.rs  swarm.rs
get-arkhe-done/src/security/: coherence.rs  memetic_filter.rs  mod.rs  shield.rs  tzinor_coupling.rs
infra/: gpd-arxiv.json  gpd-blackboard.json  gpd-conventions.json  gpd-errors.json  gpd-patterns.json  gpd-protocols.json  gpd-skills.json  gpd-state.json  gpd-verification.json
scripts/: __init__.py  block-gpd-commit.sh  build_bug_campaign_artifacts.py  check-human-authors.sh  check-no-ai-coauthors.sh  release_workflow.py  render_runtime_catalog_table.py  repo_graph_contract.py  run_bug_campaign_remaining_gates.py  schema_registry_sources.py  sync_repo_graph_contract.py  validate_runtime_catalog_schema.py
src/gpd/: __init__.py  __main__.py  (+8 more)
test_foundation/: FOUNDATION_ID  Makefile
tests/: README.md  ci_sharding.py  conftest.py  doc_surface_contracts.py  latex_test_support.py  manuscript_test_support.py  new_project_stage_contract_support.py  phase15_contract_helpers.py  phase16_projection_oracle_helpers.py  prompt_metrics_support.py  repo_graph_contract.json  runtime_test_support.py  test_arxiv_source_fallback.py  test_audit_round2_regressions.py  test_audit_round2_regressions_b.py  test_audit_round3_regressions.py  test_audit_round4_cli_fixes.py  test_audit_round4_codex_state.py  test_audit_round4_conventions_defaults.py  test_audit_round4_extras_fixes.py  test_audit_round4_health_regex.py  test_audit_round4_hooks_sync.py  test_audit_round4_json_gitops.py  test_audit_round4_mnras_header.py  test_audit_round4_phase_compare.py  test_audit_round4_phases_date.py  test_audit_round4_state_key.py  test_audit_round5_fixes.py  test_audit_round6_fixes.py  test_audit_round7_fixes.py  test_audit_round8_fixes.py  test_audit_round9_fixes.py  test_benchmarks.py  test_bibliography.py  test_bibliography_db.py  test_bootstrap_installer.py  test_bounty_lifecycle.py  test_bounty_translator.py  test_budget_ledger.py  test_bug_campaign_artifacts.py  (+105 more)
tmp_audit_compile_bug/: paper.tex
(+66526 files in other folders)
