[project]
name = "get-physics-done"
version = "1.1.0"
description = "GPD — Get Physics Done: open-source agentic AI system for physics research"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Physical Superintelligence PBC" },
]
maintainers = [
    { name = "Physical Superintelligence PBC" },
]
keywords = [
    "physical superintelligence",
    "psi",
    "physics",
    "research",
    "ai",
    "agentic",
    "automation",
    "workflow",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    # Core
    "typer>=0.24.1",
    "rich>=15.0.0",
    "pydantic>=2.13.1",
    "PyYAML>=6.0.3",
    "mcp[cli]>=1.27.0",
    # Utilities
    "pybtex>=0.25.1",
    "Pillow>=12.1.1",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
arxiv = [
    "arxiv-mcp-server>=0.4.11",
]

[project.scripts]
gpd = "gpd.cli:entrypoint"
"gpd-mcp-conventions" = "gpd.mcp.servers.conventions_server:main"
"gpd-mcp-verification" = "gpd.mcp.servers.verification_server:main"
"gpd-mcp-protocols" = "gpd.mcp.servers.protocols_server:main"
"gpd-mcp-errors" = "gpd.mcp.servers.errors_mcp:main"
"gpd-mcp-patterns" = "gpd.mcp.servers.patterns_server:main"
"gpd-mcp-arxiv" = "gpd.mcp.servers.arxiv_bridge:main"
"gpd-mcp-wolfram" = "gpd.mcp.integrations.wolfram_bridge:main"
"gpd-mcp-state" = "gpd.mcp.servers.state_server:main"
"gpd-mcp-skills" = "gpd.mcp.servers.skills_server:main"

[project.urls]
Homepage = "https://github.com/psi-oss/get-physics-done"
Documentation = "https://github.com/psi-oss/get-physics-done#readme"
Repository = "https://github.com/psi-oss/get-physics-done"
Issues = "https://github.com/psi-oss/get-physics-done/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpd"]
package-dir = { "" = "src" }
sources = ["src"]
only-include = ["src/gpd"]
artifacts = [
    "src/gpd/adapters/*.json",
    "src/gpd/core/*.json",
    "src/gpd/agents/*",
    "src/gpd/agents/**/*",
    "src/gpd/commands/*",
    "src/gpd/commands/**/*",
    "src/gpd/hooks/*",
    "src/gpd/hooks/**/*",
    "src/gpd/mcp/paper/templates/**/*",
    "src/gpd/specs/*",
    "src/gpd/specs/**/*",
]
[tool.hatch.build.targets.wheel.force-include]
"src/gpd/adapters/runtime_catalog.json" = "gpd/adapters/runtime_catalog.json"
"src/gpd/adapters/runtime_catalog_schema.json" = "gpd/adapters/runtime_catalog_schema.json"
"src/gpd/core/public_surface_contract.json" = "gpd/core/public_surface_contract.json"
"src/gpd/core/public_surface_contract_schema.json" = "gpd/core/public_surface_contract_schema.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-n auto --dist=worksteal"
markers = [
    "asyncio: mark tests that tap the pytest-asyncio event loop fixture",
    "exact: highlight the reference physics doc blocks that assert exact outcomes",
    "no_stable_hook_python: opt out of the autouse _stable_hook_python fixture",
    "parametric: tag physics reference blocks that explore families of parameter values",
    "physics: categorize the verification spec sections that model physics behavior",
    "slow: flag the longer-running physics reference cases in the verification doc",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "TID251"]
ignore = ["E501", "B008"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any".msg = "Use `object` instead of `Any` for top types."

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.10",
]
