[project]
name = "get-physics-done"
version = "1.2.0"
description = "GPD — Get Physics Done: open-source agentic AI system for physics research"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Physical Superintelligence PBC" },
]
maintainers = [
    { name = "Physical Superintelligence PBC" },
]
keywords = [
    "physical superintelligence",
    "psi",
    "physics",
    "research",
    "ai",
    "agentic",
    "ai runtimes",
    "runtime adapters",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    # Core
    "typer>=0.24.2",
    "rich>=15.0.0",
    "pydantic>=2.13.3",
    "PyYAML>=6.0.3",
    "mcp[cli]>=1.27.0",
    # Utilities
    "pybtex>=0.25.1",
    "Pillow>=12.1.1",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
arxiv = [
    "arxiv-mcp-server>=0.4.11",
    "pypdf>=5.0",
]

[project.scripts]
gpd = "gpd.cli:entrypoint"
"gpd-mcp-conventions" = "gpd.mcp.servers.conventions_server:main"
"gpd-mcp-verification" = "gpd.mcp.servers.verification_server:main"
"gpd-mcp-protocols" = "gpd.mcp.servers.protocols_server:main"
"gpd-mcp-errors" = "gpd.mcp.servers.errors_mcp:main"
"gpd-mcp-patterns" = "gpd.mcp.servers.patterns_server:main"
"gpd-mcp-arxiv" = "gpd.mcp.servers.arxiv_bridge:main"
"gpd-mcp-wolfram" = "gpd.mcp.integrations.wolfram_bridge:main"
"gpd-mcp-state" = "gpd.mcp.servers.state_server:main"
"gpd-mcp-skills" = "gpd.mcp.servers.skills_server:main"

[project.urls]
Homepage = "https://github.com/psi-oss/get-physics-done"
Documentation = "https://github.com/psi-oss/get-physics-done#readme"
Repository = "https://github.com/psi-oss/get-physics-done"
Issues = "https://github.com/psi-oss/get-physics-done/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpd"]

[tool.hatch.build.targets.sdist]
include = [
    "/.github",
    "/.gitignore",
    "/.pre-commit-config.yaml",
    "/CHANGELOG.md",
    "/CITATION.cff",
    "/CLA",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.md",
    "/bin",
    "/docs",
    "/infra",
    "/package.json",
    "/pyproject.toml",
    "/scripts",
    "/src",
    "/tests",
    "/uv.lock",
]
exclude = [
    "/.DS_Store",
    "/.mypy_cache",
    "/.npm-cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.uv-cache",
    "/.venv",
    "/__pycache__",
    "/build",
    "/GPD*",
    "/dist",
    "/tmp",
    "/*.egg-info",
    "**/__pycache__",
    "**/*.egg-info",
    "**/*.pyc",
    "**/*.pyo",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default to maximal local parallelism with worker stealing so giant modules do
# not serialize the suite behind a single xdist worker.
addopts = "-n auto --dist=worksteal"
markers = [
    "no_stable_hook_python: opt out of the autouse _stable_hook_python fixture",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "TID251"]
ignore = ["E501", "B008"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any".msg = "Use `object` instead of `Any` for top types."

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.11",
]
