[package]
name = "get-arkhe-done"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
license = "Arkhe-Public-Coherence"

[dependencies]
num-complex = "0.4"
rug = "1.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
parking_lot = "0.12"

[lib]
name = "arkhe_core"
path = "src/lib.rs"
